--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "helmet": "^7.1.0",
     "moment": "^2.29.4",
     "mongoose": "^8.0.3",
-    "playwright": "^1.56.1",
-    "playwright-extra": "^4.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "patchright": "^1.56.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
